--- a/app/src/main/res/layout/fragment_dhaba_list.xml
+++ b/app/src/main/res/layout/fragment_dhaba_list.xml
@@ -49,6 +49,7 @@
                 android:inputType="text"
                 android:padding="@dimen/_5sdp"
                 android:singleLine="true"
+                android:textColorHint="@color/text_gray"
                 android:textSize="16sp" />
 
             <View
