--- a/app/src/main/res/layout/row_timing_list.xml
+++ b/app/src/main/res/layout/row_timing_list.xml
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_4sdp"
             android:layout_weight="1"
-            android:background="@drawable/grey_stroke"
+            android:background="@drawable/default_btn_selector"
             android:fontFamily="@font/opensans_regular"
             android:hint="@string/not_available"
             android:padding="@dimen/_4sdp"
@@ -69,7 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_4sdp"
             android:layout_weight="1"
-            android:background="@drawable/grey_stroke"
+            android:background="@drawable/default_btn_selector"
             android:fontFamily="@font/opensans_regular"
             android:hint="@string/not_available"
             android:padding="@dimen/_4sdp"
