--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,5 +29,11 @@
     <color name="text_privacy_policy" tools:override="true">#A2A2A2</color>
     <color name="text_tab_secondary" tools:override="true">#AAAAAA</color>
     <color name="text_gray">#636363</color>
+    <color name="text_gray_hint">#636363</color>
     <color name="color_selected_language">#FFEBEE</color>
+    <color name="grey_amenities">#636363</color>
+    <color name="grey_view_dhaba">#636363</color>
+    <color name="grey_aaaaaa">#AAAAAA</color>
+    <color name="grey_divider_theme">#D4D3D4</color>
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#D4D3D4</color>
 </resources>
