--- a/app/src/main/res/color/input_selector.xml
+++ b/app/src/main/res/color/input_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:alpha=".4"  android:color="@color/text_gray" android:state_focused="true"/>
-    <item  android:alpha=".5" android:color="@color/text_gray" android:state_hovered="true"/>
-    <item  android:alpha=".5" android:color="@color/text_gray" android:state_enabled="true"/>
-    <item  android:alpha=".5" android:color="@color/text_gray"/>
+    <item android:alpha="0.4" android:color="@color/text_gray" android:state_focused="true" />
+    <item android:alpha="0.5" android:color="@color/text_gray" android:state_hovered="true" />
+    <item android:alpha="0.5" android:color="@color/text_gray" android:state_enabled="false" />
+    <item android:alpha="0.5" android:color="@color/text_gray" />
 </selector>
