--- a/app/src/main/res/drawable/grey_dark_stroke.xml
+++ b/app/src/main/res/drawable/grey_dark_stroke.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
 
     <stroke
-        android:width="0.8dp"
-        android:color="@color/text_gray" />
+        android:width="1dp"
+        android:color="@color/mtrl_textinput_default_box_stroke_color" />
     <corners android:radius="4dp" />
 
-    <solid android:color="@android:color/white" />
+    <solid android:color="@android:color/transparent" />
 
 </shape>
