--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -93,12 +93,14 @@
 
         <LinearLayout
             android:id="@+id/left_drawer"
-            android:layout_width="@dimen/_250sdp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start"
+            android:layout_marginEnd="-65dp"
+            android:layout_marginRight="-65dp"
             android:background="#FFFFFF"
             android:choiceMode="singleChoice"
-            android:divider="@android:color/darker_gray"
+            android:divider="@color/grey_stroke"
             android:dividerHeight="1dp"
             android:orientation="vertical">
 
@@ -109,9 +111,8 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:alpha="0.5"
-                android:background="@color/divider" />
+                android:layout_height="1dp"
+                android:background="@color/grey_stroke" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/sideMenuRecyclerV"
