--- a/app/src/main/res/layout/activity_new_dhaba.xml
+++ b/app/src/main/res/layout/activity_new_dhaba.xml
@@ -35,18 +35,13 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardParking"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="@dimen/_3sdp">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </androidx.cardview.widget.CardView>
+            android:background="@color/white"
+            android:elevation="@dimen/_4sdp"
+            android:minHeight="?attr/actionBarSize" />
 
         <LinearLayout
             android:id="@+id/llSteps"
@@ -82,7 +77,7 @@
                     android:layout_width="0dp"
                     android:layout_height="2dp"
                     android:layout_weight="1"
-                    android:background="@{(stepnumber == 2||stepnumber == 3||stepnumber == 4) ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.grey)}" />
+                    android:background="@{(stepnumber == 2||stepnumber == 3||stepnumber == 4) ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.mtrl_textinput_default_box_stroke_color)}" />
 
                 <TextView
                     android:id="@+id/step2"
@@ -92,14 +87,14 @@
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:text="2"
-                    android:textColor="@{(stepnumber == 2 ||stepnumber == 3 || stepnumber == 4) ? ContextCompat.getColor(context,R.color.white): ContextCompat.getColor(context,R.color.grey)}" />
+                    android:textColor="@{(stepnumber == 2 ||stepnumber == 3 || stepnumber == 4) ? ContextCompat.getColor(context,R.color.white): ContextCompat.getColor(context,R.color.mtrl_textinput_default_box_stroke_color)}" />
 
                 <View
                     android:id="@+id/viewStep3"
                     android:layout_width="0dp"
                     android:layout_height="2dp"
                     android:layout_weight="1"
-                    android:background="@{(stepnumber == 3||stepnumber == 4) ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.grey)}" />
+                    android:background="@{(stepnumber == 3||stepnumber == 4) ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.mtrl_textinput_default_box_stroke_color)}" />
 
 
                 <TextView
@@ -110,14 +105,14 @@
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:text="3"
-                    android:textColor="@{(stepnumber == 3 || stepnumber == 4) ? ContextCompat.getColor(context,R.color.white): ContextCompat.getColor(context,R.color.grey)}" />
+                    android:textColor="@{(stepnumber == 3 || stepnumber == 4) ? ContextCompat.getColor(context,R.color.white): ContextCompat.getColor(context,R.color.mtrl_textinput_default_box_stroke_color)}" />
 
                 <View
                     android:id="@+id/viewStep4"
                     android:layout_width="0dp"
                     android:layout_height="2dp"
                     android:layout_weight="1"
-                    android:background="@{stepnumber == 4 ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.grey)}"
+                    android:background="@{stepnumber == 4 ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.mtrl_textinput_default_box_stroke_color)}"
                     android:visibility="@{userModel.isExecutive() ? View.VISIBLE : View.GONE}" />
 
                 <TextView
@@ -128,7 +123,7 @@
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:text="4"
-                    android:textColor="@{stepnumber == 4 ? ContextCompat.getColor(context,R.color.white): ContextCompat.getColor(context,R.color.grey)}"
+                    android:textColor="@{stepnumber == 4 ? ContextCompat.getColor(context,R.color.white): ContextCompat.getColor(context,R.color.mtrl_textinput_default_box_stroke_color)}"
                     android:visibility="@{userModel.isExecutive() ? View.VISIBLE : View.GONE}" />
 
                 <View
@@ -181,7 +176,7 @@
                         android:gravity="start"
                         android:singleLine="true"
                         android:text="@string/dhaba_details"
-                        android:textColor="@{(stepnumber == 2 ||stepnumber == 3 || stepnumber == 4) ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.grey)}"
+                        android:textColor="@{(stepnumber == 2 ||stepnumber == 3 || stepnumber == 4) ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.mtrl_textinput_default_box_stroke_color)}"
                         android:textSize="11sp" />
 
                 </LinearLayout>
@@ -202,7 +197,7 @@
                         android:gravity="start"
                         android:singleLine="true"
                         android:text="@string/amenities"
-                        android:textColor="@{(stepnumber == 3 || stepnumber == 4) ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.grey)}"
+                        android:textColor="@{(stepnumber == 3 || stepnumber == 4) ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.mtrl_textinput_default_box_stroke_color)}"
                         android:textSize="11sp" />
 
                 </LinearLayout>
@@ -223,7 +218,7 @@
                         android:gravity="start"
                         android:singleLine="true"
                         android:text="@string/bank_details"
-                        android:textColor="@{stepnumber == 4 ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.grey)}"
+                        android:textColor="@{stepnumber == 4 ? ContextCompat.getColor(context,R.color.colorPrimary): ContextCompat.getColor(context,R.color.mtrl_textinput_default_box_stroke_color)}"
                         android:textSize="11sp" />
 
                 </LinearLayout>
@@ -239,14 +234,16 @@
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tabLayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="?attr/actionBarSize"
                 android:background="@color/white"
+                app:tabIndicatorHeight="@dimen/_2sdp"
                 app:tabMode="scrollable"
                 app:tabSelectedTextColor="@color/colorPrimary"
-                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
+                app:tabTextAppearance="@style/TabsCustomStyle"
                 app:tabTextColor="@color/text_tab_secondary">
 
                 <com.google.android.material.tabs.TabItem
+                    style="@style/openRegularTextStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/owner_details" />
