--- a/app/src/main/res/layout/dialog_add_manager.xml
+++ b/app/src/main/res/layout/dialog_add_manager.xml
@@ -93,16 +93,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/grey_dark_stroke"
-                android:orientation="horizontal">
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingVertical="@dimen/_2sdp">
 
                 <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                     android:id="@+id/ccpCountryCode"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
                     android:gravity="center"
                     app:ccp_defaultCode="91"
                     app:ccp_hideNameCode="true"
+                    app:ccp_hidePhoneCode="true"
                     app:ccp_textSize="16sp" />
 
                 <View
@@ -112,10 +115,25 @@
                     android:background="@color/grey_stroke" />
 
                 <androidx.appcompat.widget.AppCompatEditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:background="@android:color/transparent"
+                    android:enabled="false"
+                    android:focusable="false"
+                    android:fontFamily="@font/opensans_regular"
+                    android:inputType="number"
+                    android:paddingVertical="@dimen/_10sdp"
+                    android:paddingStart="@dimen/_5sdp"
+                    android:text="+91"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/grey"
+                    android:textSize="16sp" />
+
+                <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edPhoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_4sdp"
                     android:background="@android:color/transparent"
                     android:hint="@string/_10_digit_mobile_number"
                     android:inputType="phone"
