--- a/app/src/main/res/layout/dialog_highway_selection.xml
+++ b/app/src/main/res/layout/dialog_highway_selection.xml
@@ -24,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/white"
         android:padding="@dimen/_10sdp">
 
         <FrameLayout
