--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -34,15 +34,15 @@
         android:animateLayoutChanges="true"
         android:background="@color/white"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="@dimen/_15sdp">
+        android:orientation="vertical">
 
         <include layout="@layout/layout_app_logo" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_36sdp"
+            android:layout_marginTop="@dimen/_56sdp"
+            android:fontFamily="@font/opensans_regular"
             android:text="@string/verify"
             android:textColor="@color/black"
             android:textSize="26sp" />
@@ -50,40 +50,45 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_14sdp"
+            android:layout_marginTop="@dimen/_14sdp"
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/enter_otp_sent_to"
+                android:fontFamily="@font/opensans_regular"
                 android:gravity="center"
+                android:text="@string/enter_otp_sent_to"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="18sp" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvOtpSentTo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_5sdp"
+                android:fontFamily="@font/opensans_regular"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <com.mukesh.OtpView
             android:id="@+id/otpView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_14sdp"
+            android:layout_marginEnd="@dimen/_16sdp"
             android:focusableInTouchMode="true"
             android:inputType="number"
             android:itemBackground="@color/white"
             android:textColor="@android:color/black"
+            android:textSize="@dimen/_24ssp"
             app:OtpItemCount="4"
-            app:OtpItemHeight="@dimen/_45sdp"
+            app:OtpItemHeight="@dimen/_54sdp"
             app:OtpItemRadius="@dimen/_4sdp"
             app:OtpItemSpacing="@dimen/_15sdp"
-            app:OtpItemWidth="@dimen/_45sdp"
+            app:OtpItemWidth="@dimen/_54sdp"
             app:OtpLineColor="@color/grey_otp_box"
             app:OtpLineWidth="@dimen/_1sdp"
             app:OtpViewType="rectangle" />
@@ -92,18 +97,21 @@
             android:id="@+id/tvResendIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_14sdp"
+            android:fontFamily="@font/opensans_regular"
             android:gravity="center"
             android:text="@{countDownTime}"
-            android:textSize="14sp"
             android:textAllCaps="false"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/btnLoginOwner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_height="@dimen/_44sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_14sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:background="@drawable/primary_color_btn_selector"
             android:enabled="@{otp.length() == 4}"
             android:text="@string/continue_text"
@@ -117,6 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_10sdp"
             android:background="@drawable/grey_stroke_selector"
+            android:fontFamily="@font/opensans_bold"
             android:text="@string/change_phone_number"
             android:textAllCaps="false"
             android:textColor="@color/black"
@@ -125,9 +134,12 @@
         <Button
             android:id="@+id/btnResentOtp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_height="@dimen/_44sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_14sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
             android:background="@drawable/grey_stroke_selector"
+            android:fontFamily="@font/opensans_regular"
             android:text="@string/resend_otp"
             android:textAllCaps="false"
             android:textColor="@color/black"
