--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -30,6 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:animateLayoutChanges="true"
+        android:background="@color/white"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingTop="@dimen/_15sdp"
@@ -42,7 +43,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_36sdp"
+            android:layout_marginTop="@dimen/_56sdp"
             android:layout_marginBottom="@dimen/_20sdp"
             android:fontFamily="@font/opensans_regular"
             android:text="@string/sign_up"
@@ -79,10 +80,11 @@
             <LinearLayout
                 android:id="@+id/editlayout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_46sdp"
                 android:layout_marginHorizontal="@dimen/_15sdp"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:background="@drawable/grey_dark_stroke"
+                android:gravity="center_vertical"
                 android:orientation="horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -91,11 +93,12 @@
                 <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                     android:id="@+id/ccpCountryCode"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:gravity="center"
+                    android:layout_height="@dimen/_46sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:gravity="center_vertical"
                     app:ccp_defaultCode="91"
                     app:ccp_hideNameCode="true"
+                    app:ccp_hidePhoneCode="true"
                     app:ccp_textSize="16sp" />
 
                 <View
@@ -103,12 +106,26 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="@dimen/_2sdp"
                     android:background="@color/grey" />
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
+                    android:background="@android:color/transparent"
+                    android:enabled="false"
+                    android:focusable="false"
+                    android:fontFamily="@font/opensans_regular"
+                    android:inputType="number"
+                    android:paddingVertical="@dimen/_10sdp"
+                    android:paddingStart="@dimen/_5sdp"
+                    android:text="+91"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/grey"
+                    android:textSize="16sp" />
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/edPhoneNumber"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_4sdp"
+                    android:layout_height="match_parent"
                     android:background="@android:color/transparent"
                     android:fontFamily="@font/opensans_regular"
                     android:hint="@string/enter_mobile_number_mandatory"
@@ -153,7 +170,7 @@
             <Button
                 android:id="@+id/btnSignUp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_44sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/primary_color_btn_selector"
                 android:fontFamily="@font/opensans_bold"
@@ -165,10 +182,10 @@
             <Button
                 android:id="@+id/btnLogin"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_44sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:background="@drawable/default_btn_selector"
-                android:fontFamily="@font/opensans_bold"
+                android:fontFamily="@font/opensans_semibold"
                 android:text="@string/login"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary"
