--- a/app/src/main/res/layout/view_side_profile.xml
+++ b/app/src/main/res/layout/view_side_profile.xml
@@ -15,49 +15,67 @@
 
     </data>
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        android:padding="@dimen/_5sdp">
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/profileView"
+        <ImageView
+            android:id="@+id/ivClose"
+            android:layout_width="@dimen/_35sdp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:padding="@dimen/_10sdp"
+            android:src="@drawable/ic_close_dark" />
+
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_100sdp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:padding="@dimen/_10sdp">
-
-            <com.transport.mall.utils.custom.CircleImageView
-                android:id="@+id/imProfile"
-                loadImage="@{userModel.ownerPic}"
-                placeholder="@{R.drawable.ic_profile_pic_placeholder}"
-                android:layout_width="@dimen/_60sdp"
-                android:layout_height="@dimen/_60sdp"
-                android:layout_marginEnd="10dp" />
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:padding="@dimen/_5sdp">
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_vertical">
+                android:id="@+id/profileView"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_90sdp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingHorizontal="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_10sdp">
 
-                <TextView
-                    android:id="@+id/tvProfileName"
-                    android:layout_width="wrap_content"
+                <com.transport.mall.utils.custom.CircleImageView
+                    android:id="@+id/imProfile"
+                    loadImage="@{userModel.ownerPic}"
+                    placeholder="@{R.drawable.ic_profile_pic_placeholder}"
+                    android:layout_width="@dimen/_60sdp"
+                    android:layout_height="@dimen/_60sdp"
+                    android:layout_marginEnd="10dp" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:drawablePadding="@dimen/_10sdp"
-                    android:text="@{userModel.ownerName}"
-                    android:textColor="@color/black"
-                    android:textSize="19sp"
-                    app:drawableEndCompat="@drawable/ic_edit_black"
-                    tools:text="Profile Name" />
+                    android:layout_weight="1"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:id="@+id/tvProfileName"
+                        android:layout_width="wrap_content"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:drawablePadding="@dimen/_5sdp"
+                        android:text="@{userModel.ownerName}"
+                        android:textColor="@color/black"
+                        android:textSize="19sp"
+                        app:drawableEndCompat="@drawable/ic_edit_black"
+                        tools:text="Profile Name" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
-        </LinearLayout>
-
-    </FrameLayout>
+        </FrameLayout>
+    </LinearLayout>
 </layout>
