--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+        <item name="android:ambientShadowAlpha">0.1</item>
+        <item name="android:spotShadowAlpha">0.1</item>
     </style>
 
     <style name="DrawerArrowStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
@@ -99,9 +101,18 @@
         <item name="otpViewStyle">@style/OtpWidget.OtpView</item>
     </style>
 
-    <style name="DialogAnimation">
+    <style name="DialogAnimationBottom">
         <item name="android:windowEnterAnimation">@anim/slide_in_down</item>
         <item name="android:windowExitAnimation">@anim/slide_out_up</item>
+    </style>
+
+    <style name="PauseDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowAnimationStyle">@style/PauseDialogAnimation</item>
+    </style>
+
+    <style name="PauseDialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/enter_from_right</item>
+        <item name="android:windowExitAnimation">@anim/exit_to_right</item>
     </style>
 
     <style name="TextLabel" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
@@ -113,7 +124,27 @@
         <item name="colorControlNormal">@color/text_gray</item>
         <item name="colorControlActivated">@color/text_gray</item>
         <item name="boxStrokeColor">@color/input_selector</item>
-        <item name="boxStrokeWidth">0.7dp</item>
+        <item name="boxStrokeWidth">0.6dp</item>
+    </style>
+
+    <style name="TabsCustomStyle" parent="@android:style/TextAppearance.Widget.TabWidget">
+        <item name="android:fontFamily">@font/opensans_semibold</item>
+    </style>
+
+    <style name="TabsStyleRegular" parent="@android:style/TextAppearance.Widget.TabWidget">
+        <item name="android:fontFamily">@font/opensans_regular</item>
+    </style>
+
+    <style name="openBoldTextStyle">
+        <item name="android:fontFamily">@font/opensans_bold</item>
+    </style>
+
+    <style name="openSemiBoldTextStyle">
+        <item name="android:fontFamily">@font/opensans_semibold</item>
+    </style>
+
+    <style name="openRegularTextStyle">
+        <item name="android:fontFamily">@font/opensans_regular</item>
     </style>
 
 </resources>
